# volx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  METHODOLOGY.md  README.md  tarpaulin.toml
.github/workflows/: ci.yml  contracts.yml  deploy.yml
api/: Dockerfile  go.mod  go.sum
api/cmd/api/: main.go
api/internal/config/: config.go
api/internal/handlers/: health.go  index.go
api/internal/storage/: clickhouse.go  redis.go
api/internal/stream/: conn.go  hub.go  iplimit.go
contracts/: .gitignore  README.md  foundry.toml
contracts/deployments/: sepolia-v2.json  sepolia.json
contracts/script/: Deploy.s.sol  DeployV2.s.sol
contracts/src/: MockUSDC.sol  VolXOracle.sol  VolXPerp.sol  VolXPerpV2.sol
contracts/test/: MockUSDC.t.sol  Scaffold.t.sol  VolXOracle.t.sol  VolXPerp.t.sol  VolXPerpLiquidation.t.sol  VolXPerpPositions.t.sol  VolXPerpV2.t.sol
contracts/test/harness/: VolXPerpHarness.sol
contracts/test/invariant/: PerpHandler.sol  VolXPerpInvariants.t.sol
contracts/test/mocks/: ReentrantToken.sol
crates/engine/: Cargo.toml  Dockerfile
crates/engine/src/: blend.rs  bs.rs  chain.rs  confidence.rs  interpolate.rs  lib.rs  main.rs  outlier.rs  sinks.rs  snapshot.rs  spline.rs  strip.rs  variance.rs
crates/engine/tests/: confidence_e2e.rs  median_blend.rs  outlier_e2e.rs
crates/ingestion/: Cargo.toml  Dockerfile
crates/ingestion/src/: main.rs
crates/ingestion/src/venues/: bybit.rs  deribit.rs  mod.rs  okx.rs
crates/normalizer/: Cargo.toml
crates/normalizer/src/: config.rs  dedup.rs  lib.rs
crates/normalizer/src/sink/: clickhouse.rs  mod.rs  redis.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: ids.rs  index.rs  lib.rs  strip.rs  tick.rs  units.rs
crates/shared-types/tests/: serde_roundtrip.rs
docker/: clickhouse-init.sql  docker-compose.prod.yml  docker-compose.yml
docs/: deployment.md  local-dev.md  onchain-demo.md  vix-notes.md
frontend/: .env.example  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: page.tsx
frontend/app/chart/[index]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/methodology/: page.tsx
frontend/app/pool/: page.tsx
frontend/app/trade/: page.tsx
frontend/components/: AnimatedBackground.tsx  Chart.tsx  ConfidenceRing.tsx  Dashboard.tsx  Footer.tsx  Header.tsx  IndexCard.tsx  IvSmileChart.tsx  LivePulse.tsx  LiveStats.tsx  Sparkline.tsx  ThemeToggle.tsx  TickerTape.tsx  TradeChart.tsx  TrustStrip.tsx  VenueNetwork.tsx  dapp.tsx
frontend/lib/: api.ts  contracts.ts  format.ts  perp.ts  protocol.ts  theme.tsx  timeframes.ts  useIndexTicks.ts  wallet.tsx
keeper/: Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
keeper/src/: api.ts  chain.ts  config.ts  decide.test.ts  decide.ts  index.ts  log.ts  oracleAbi.ts  orders.ts  perpAbi.ts  scale.ts
research/: README.md  bvol-backtest.ipynb  bvol-dvol-gap-diagnostics.ipynb  methodology-validation.ipynb  requirements.txt  vix-spx-replication.ipynb
research/scripts/: dvol_fetch.py  tardis_fetch.py
scripts/: demo.sh  deploy.sh  dev-stack.sh  e2e-smoke.sh  e2e-ws-client.py
