[workspace]
resolver = "3"
members = [
    "crates/shared-types",
    "crates/ingestion",
    "crates/normalizer",
    "crates/engine",
]

[workspace.package]
edition      = "2024"
rust-version = "1.85"
version      = "0.1.0"
license      = "MIT"
authors      = ["obchain <riteshnikhoriya94@gmail.com>"]
repository   = "https://github.com/obchain/volx"

# Centralized dependency versions. Crates inherit via:
#   [dependencies]
#   serde = { workspace = true, features = ["derive"] }
[workspace.dependencies]
serde      = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0" }
# `time` over `chrono`: lighter, no panic-prone APIs, first-class serde support
# via "serde-well-known" (RFC 3339 strings, which matches METHODOLOGY.md §5).
time       = { version = "0.3", default-features = false, features = ["std", "serde", "serde-well-known", "macros"] }
# Hex-encode binary hashes (e.g. `StripHash`) for JSON / DB columns. Tiny crate,
# no transitive deps.
hex        = { version = "0.4", default-features = false, features = ["std"] }

# Async runtime + I/O — ingestion crate (#9 onwards). Bringing tokio in once at
# workspace level keeps the engine + normalizer on the same major version
# when they later need timers / channels.
tokio              = { version = "1.43" }
tokio-tungstenite  = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util       = { version = "0.3", default-features = false, features = ["std"] }
flume              = { version = "0.11", default-features = false, features = ["async"] }
# rustls over native-tls: avoids OpenSSL / system-crypto fragility on
# Oracle Cloud Always Free deploy targets.
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }
anyhow             = { version = "1" }
thiserror          = { version = "2" }

# Centralized lint policy. Individual crates inherit via:
#   [lints]
#   workspace = true
[workspace.lints.rust]
unsafe_code           = "forbid"
unreachable_pub       = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow the noisier pedantic lints that fight against clear domain code.
# `missing_panics_doc` deliberately stays at the pedantic default (warn) — a
# stray panic in a financial engine should be documented or removed, not
# silenced workspace-wide.
module_name_repetitions = "allow"
missing_errors_doc      = "allow"

# Release profile knobs (worth setting now so the M1 #20 scheduler benchmarks
# don't accidentally measure debug-mode performance). `lto = "thin"` keeps
# build time reasonable; switch to `"fat"` only if the engine profile says so.
# `codegen-units = 1` overlaps with thin-LTO's cross-CGU inlining; the win is
# small but it gives reproducible single-thread codegen for benchmarking. If
# build time becomes a friction point before #20, drop to `codegen-units = 16`
# without losing much of the inlining benefit.
[profile.release]
opt-level = 3
lto       = "thin"
codegen-units = 1
debug     = "line-tables-only"
