[package]
name         = "volx-ingestion"
description  = "Venue connectors that feed option ticks into the normalizer."
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "volx-ingestion"
path = "src/main.rs"

[dependencies]
volx-shared-types = { path = "../shared-types" }

serde      = { workspace = true }
serde_json = { workspace = true }
time       = { workspace = true }

tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net"] }
tokio-tungstenite  = { workspace = true }
futures-util       = { workspace = true, features = ["sink"] }
flume              = { workspace = true }
reqwest            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
anyhow             = { workspace = true }
thiserror          = { workspace = true }

[lints]
workspace = true
