[package]
name         = "volx-normalizer"
description  = "Quote filters + tick deduplication between ingestion and engine."
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
# Used by the filter / dedup implementations landing in #12, #13.
volx-shared-types = { path = "../shared-types" }

[lints]
workspace = true
