[package]
name         = "volx-normalizer"
description  = "Quote filters + tick deduplication between ingestion and engine."
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
volx-shared-types = { path = "../shared-types" }

serde   = { workspace = true }
time    = { workspace = true }
toml    = { workspace = true }
metrics = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
time = { workspace = true }

[lints]
workspace = true
