[package]
name         = "volx-normalizer"
description  = "Quote filters + tick deduplication between ingestion and engine."
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
volx-shared-types = { path = "../shared-types" }

serde      = { workspace = true }
serde_json = { workspace = true }
time       = { workspace = true }
toml       = { workspace = true }
metrics    = { workspace = true }
tracing    = { workspace = true }

# Persistence stack (issue #16). The sink module ties the per-tick filter
# pipeline to the storage layer that lands ticks in ClickHouse + fans them
# out via Redis pubsub for live consumers.
tokio      = { workspace = true, features = ["macros", "rt", "sync", "time"] }
flume      = { workspace = true }
anyhow     = { workspace = true }
clickhouse = { workspace = true }
redis      = { workspace = true }

[dev-dependencies]
time  = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util", "time"] }

[lints]
workspace = true
