[package]
name         = "volx-shared-types"
description  = "Core domain types shared by ingestion, normalizer, and engine."
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true
