[package]
name         = "volx-shared-types"
description  = "Core domain types shared by ingestion, normalizer, and engine."
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
time  = { workspace = true }
hex   = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
